--- a/2d/2d.html
+++ b/2d/2d.html
@@ -7,7 +7,7 @@
   </head>
   <body>
     <div id="centered">
-      <canvas id="mycan"></canvas>
+      <canvas id="mycan" style="height: fit-content; width: auto;"></canvas>
     </div>
     <script type="text/javascript" src="./tacker.js"></script>
   </body>
